Added download links to binaries in google code

--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Tesseroids by leouieda</title>
+    <title>Tesseroids</title>
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
@@ -12,25 +13,40 @@
     <!--[if lt IE 9]>
     <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-  </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1 class="header">Tesseroids</h1>
-        <p class="header">Forward modeling of gravitational fields in spherical coordinates</p>
+</head>
 
-        <ul>
-          <li class="download"><a class="buttons" href="https://github.com/leouieda/tesseroids/zipball/master">Download ZIP</a></li>
-          <li class="download"><a class="buttons" href="https://github.com/leouieda/tesseroids/tarball/master">Download TAR</a></li>
-          <li><a class="buttons github" href="https://github.com/leouieda/tesseroids">View On GitHub</a></li>
-        </ul>
+<body>
+<div class="wrapper">
 
-        <p class="header">This project is maintained by <a class="header name" href="https://github.com/leouieda">leouieda</a></p>
+<header>
+    <h1 class="header">Tesseroids</h1>
+    <p class="header">Gravity forward modeling in spherical coordinates</p>
 
+    <ul>
+        <li class="download"><a class="buttons" 
+            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Download Linux (32bit)</a>
+        </li>
+        <li class="download"><a class="buttons" 
+            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin64.tar.gz&can=2&q=">Download Linux (64bit)</a>
+        </li>
+        <li class="download"><a class="buttons" 
+            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-win32.zip&can=2&q=">Download Windows</a>
+        </li>
+        <li class="download"><a class="buttons" 
+            href="https://github.com/leouieda/tesseroids/zipball/master">Download latest source</a>
+        </li>
+        <li><a class="buttons github" 
+            href="https://github.com/leouieda/tesseroids">View On GitHub</a>
+        </li>
+    </ul>
 
-      </header>
-      <section>
-        <h3>Welcome to GitHub Pages.</h3>
+    <p class="header">Maintained by 
+        <a class="header name" href="https://github.com/leouieda">Leonardo Uieda</a>
+    </p>
+</header>
+
+  <section>
+    <h3>Welcome to GitHub Pages.</h3>
 
 <p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
@@ -56,12 +72,12 @@ $ git checkout gh-pages
 <h3>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-      </footer>
-    </div>
-    <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-		
-  </body>
+  </section>
+  <footer>
+    <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
+  </footer>
+</div>
+<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+    
+</body>
 </html>
