Fixed download link names to fit in the buttons

--- a/index.html
+++ b/index.html
@@ -24,16 +24,16 @@
 
     <ul>
         <li class="download"><a class="buttons" 
-            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Download Linux (32bit)</a>
+            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Linux (32bit)</a>
         </li>
         <li class="download"><a class="buttons" 
-            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin64.tar.gz&can=2&q=">Download Linux (64bit)</a>
+            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin64.tar.gz&can=2&q=">Linux (64bit)</a>
         </li>
         <li class="download"><a class="buttons" 
-            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-win32.zip&can=2&q=">Download Windows</a>
+            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-win32.zip&can=2&q=">Windows</a>
         </li>
         <li class="download"><a class="buttons" 
-            href="https://github.com/leouieda/tesseroids/zipball/master">Download latest source</a>
+            href="https://github.com/leouieda/tesseroids/zipball/master">Latest source</a>
         </li>
         <li><a class="buttons github" 
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
