--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Tesseroids</title>
 
+    <link rel="shortcut icon" href="image/logo.ico">
+
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
     <script src="javascripts/scale.fix.js"></script>
@@ -39,16 +41,21 @@
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
         </li>
     </ul>
-
+    
     <p class="header">Maintained by 
         <a class="header name" href="https://github.com/leouieda">Leonardo Uieda</a>
     </p>
 </header>
 
-  <section>
+<section>
+
     <h3>Welcome to GitHub Pages.</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    <img src='images/logo.png' style='float:left; border:none; margin=0px 10px 10px'>
+
+    <p>This automatic page generator is the easiest way to create beautiful 
+    pages for all of your projects. Author your page content here using 
+    GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
 
 <pre><code>$ cd your_repo_root/repo_name
 $ git fetch origin
@@ -72,12 +79,17 @@ $ git checkout gh-pages
 <h3>Support or Contact</h3>
 
 <p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-  </section>
-  <footer>
-    <p><small>Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme</small></p>
-  </footer>
+
+
+</section>
+
+<footer>
+    <p><small>
+        Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme
+    </small></p>
+</footer>
+
 </div>
 <!--[if !IE]><script>fixScale(document);</script><![endif]-->
-    
 </body>
 </html>
