--- a/index.html
+++ b/index.html
@@ -49,43 +49,69 @@
 
 <section>
 
-    <h3>Welcome to GitHub Pages.</h3>
+    <h3>Welcome to Tesseroids</h3>
 
     <img src='images/logo.png' style='float:left; border:none; margin=0px 10px 10px'>
 
-    <p>This automatic page generator is the easiest way to create beautiful 
-    pages for all of your projects. Author your page content here using 
-    GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
+    <p>
+    Tesseroids is a suite of <b>open source</b> 
+    programs for the forward modeling of gravitational fields 
+    in spherical coordinates.
+    It can model the gravitational potential, acceleration, and gradient tensor.
+    All programs run on the <b>command-line</b>
+    and can be easily plugged into scripts and workflows.
+    </p>
 
-<pre><code>$ cd your_repo_root/repo_name
-$ git fetch origin
-$ git checkout gh-pages
-</code></pre>
+    <p>
+    The geometric element used in the modelling processes is
+    a spherical prism, also called a 
+    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html#what-is-a-tesseroid-anyway">tesseroid</a>.
+    However, Tesseroids also contains programs for modeling using
+    right rectangular prisms, both in Cartesian and spherical coordinates.
+    </p>
+    
+    <h3>Authors and Contributors</h3>
 
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+    <p>
+    Tesseroids is developed by myself
+    (<a href="http://fatiando.org/people/uieda">Leonardo Uieda</a>)
+    in cooperation with prof.
+    <a href="http://lithoflex.org">Carla Braitenberg</a>.
+    </p>
 
-<h3>Designer Templates</h3>
+    <p>
+    It was first developed as my bachelor's thesis
+    at the <a href="http://www.iag.usp.br">Universidade de Sao Paulo</a>, Brazil.
+    It has now made it's way into my PhD thesis at
+    <a href="http://www.on.br">Observatorio Nacional</a>, Brazil.    
+    </p>
 
-<p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
+    <h3>License</h3>
 
-<h3>Rather Drive Stick?</h3>
+    <p>
+    As of version 1.1,
+    Tesseroids is
+    <a href="http://tesseroids.readthedocs.org/en/latest/license.html">BSD licensed</a>.
+    This means that it can be <b>reused</b> and <b>remixed</b>
+    with fewer restrictions.
+    </p>
 
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator written by our own Tom Preston-Werner. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
+    <h3>Documentation</h3>
 
-<h3>Authors and Contributors</h3>
-
-<p>You can <a href="https://github.com/blog/821" class="user-mention">@mention</a> a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor's GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="http://help.github.com/pages">http://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
-
+    Documentation for Tesseroids is hosted on  
+    <a href="http://tesseroids.readthedocs.org">Read the Docs</a>!
+    Go to the docs for
+    <a href="http://tesseroids.readthedocs.org/en/latest/install.html">installation</a>, 
+    <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>, 
+    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theorerical background</a>,
+    and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
 
 </section>
 
 <footer>
     <p><small>
-        Hosted on <a href="https://pages.github.com">GitHub Pages</a> using the Dinky theme
+        Hosted on <a href="https://pages.github.com">GitHub Pages</a> 
+        using the Dinky theme
     </small></p>
 </footer>
 
