Trying out disqus comments in the site

--- a/index.html
+++ b/index.html
@@ -106,6 +106,23 @@
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theorerical background</a>,
     and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
 
+    <h3>Let us know what you think</h3>    
+
+    <div id="disqus_thread"></div>
+    <script type="text/javascript">
+        /* * * configuration variables: edit before pasting into your webpage * * */
+        var disqus_shortname = ''; // required: replace example with your forum shortname
+
+        /* * * don't edit below this line * * */
+        (function() {
+            var dsq = document.createelement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
+            (document.getelementsbytagname('head')[0] || document.getelementsbytagname('body')[0]).appendchild(dsq);
+        })();
+    </script>
+    <noscript>please enable javascript to view the <a href="http://disqus.com/?ref_noscript">comments powered by disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">disqus</span></a>
+
 </section>
 
 <footer>
