Forgot to add disqus name

--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
     <div id="disqus_thread"></div>
     <script type="text/javascript">
         /* * * configuration variables: edit before pasting into your webpage * * */
-        var disqus_shortname = ''; // required: replace example with your forum shortname
+        var disqus_shortname = 'tesseroids'; // required: replace example with your forum shortname
 
         /* * * don't edit below this line * * */
         (function() {
