--- a/index.html
+++ b/index.html
@@ -110,19 +110,19 @@
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
-        /* * * configuration variables: edit before pasting into your webpage * * */
+        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
         var disqus_shortname = 'tesseroids'; // required: replace example with your forum shortname
 
-        /* * * don't edit below this line * * */
+        /* * * DON'T EDIT BELOW THIS LINE * * */
         (function() {
-            var dsq = document.createelement('script'); dsq.type = 'text/javascript'; dsq.async = true;
+            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
             dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getelementsbytagname('head')[0] || document.getelementsbytagname('body')[0]).appendchild(dsq);
+            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
         })();
     </script>
-    <noscript>please enable javascript to view the <a href="http://disqus.com/?ref_noscript">comments powered by disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">disqus</span></a>
-
+    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+    
 </section>
 
 <footer>
