Fixed typo in disqus header

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theorerical background</a>,
     and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
 
-    <h3>Let us know what you think</h3>    
+    <h3>Let me know what you think</h3>    
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
