--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Tesseroids</title>
 
-    <link rel="shortcut icon" href="image/logo.ico">
+    <link rel="shortcut icon" href="images/logo.ico">
 
     <link rel="stylesheet" href="stylesheets/styles.css">
     <link rel="stylesheet" href="stylesheets/pygment_trac.css">
