--- a/index.html
+++ b/index.html
@@ -54,8 +54,8 @@
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
         </li>
     </ul>
-    
-    <p class="header">Maintained by 
+   
+    <p class="header">Developed by 
         <a class="header name" href="https://github.com/leouieda">Leonardo Uieda</a>
     </p>
 </header>
@@ -64,7 +64,9 @@
 
     <h3>Welcome to Tesseroids</h3>
 
-    <img src='images/logo.png' style='float:left; border:none; margin=0px 10px 10px'>
+    <img src='images/logo.png' 
+     style='float:left; border:none; margin-right:10px; margin-top:0px'
+     width="90px">
 
     <p>
     Tesseroids is a suite of <b>open source</b> 
@@ -72,16 +74,30 @@
     in spherical coordinates.
     It can model the gravitational potential, acceleration, and gradient tensor.
     All programs run on the <b>command-line</b>
-    and can be easily plugged into scripts and workflows.
+    and can be easily plugged into shell scripts and workflows.
     </p>
 
-    <p>
+    <h3>So, what is a tesseroid?</h3>
+
+    <img 
+     src="https://tesseroids.readthedocs.org/en/latest/_images/tesseroid.png"
+     style="float:left; margin-right:20px; margin-top:0px; border:none;"
+     width="200px">
+
+    <p style="margin-top:20px; margin-bottom:60px">
     The geometric element used in the modelling processes is
-    a spherical prism, also called a 
+    a <strong>spherical prism</strong>, also called a 
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html#what-is-a-tesseroid-anyway">tesseroid</a>.
-    However, Tesseroids also contains programs for modeling using
-    right rectangular prisms, both in Cartesian and spherical coordinates.
+    Tesseroids are useful to model
+    <strong>large geologic structures</strong>
+    where the Earth's curvature
+    must be taken into consideration.    
+    However, the <i>Tesseroids</i> package 
+    also contains programs for modeling using
+    <strong>right rectangular prisms</strong>, 
+    both in Cartesian and spherical coordinates.
     </p>
+
     
     <h3>Authors and Contributors</h3>
 
