Changed link to tesseroid image from the readthedocs to a local image

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
     <h3>So, what is a tesseroid?</h3>
 
     <img 
-     src="https://tesseroids.readthedocs.org/en/latest/_images/tesseroid.png"
+     src="images/tesseroid.png"
      style="float:left; margin-right:20px; margin-top:0px; border:none;"
      width="200px">
 
