--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
      width="200px">
 
     <p style="margin-top:20px; margin-bottom:60px">
-    The geometric element used in the modelling processes is
+    The geometric element used in the modeling processes is
     a <strong>spherical prism</strong>, also called a 
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html#what-is-a-tesseroid-anyway">tesseroid</a>.
     Tesseroids are useful to model
