Added citation section

--- a/index.html
+++ b/index.html
@@ -35,27 +35,28 @@
 
 <header>
     <h1 class="header">Tesseroids</h1>
-    <p class="header">Gravity forward modeling in spherical coordinates</p>
+    <p class="header">Forward modeling of gravitational fields in spherical
+    coordinates</p>
 
     <ul>
-        <li class="download"><a class="buttons" 
+        <li class="download"><a class="buttons"
             href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Linux (32bit)</a>
         </li>
-        <li class="download"><a class="buttons" 
+        <li class="download"><a class="buttons"
             href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin64.tar.gz&can=2&q=">Linux (64bit)</a>
         </li>
-        <li class="download"><a class="buttons" 
+        <li class="download"><a class="buttons"
             href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-win32.zip&can=2&q=">Windows</a>
         </li>
-        <li class="download"><a class="buttons" 
+        <li class="download"><a class="buttons"
             href="https://github.com/leouieda/tesseroids/zipball/master">Latest source</a>
         </li>
-        <li><a class="buttons github" 
+        <li><a class="buttons github"
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
         </li>
     </ul>
-   
-    <p class="header">Developed by 
+
+    <p class="header">Developed by
         <a class="header name" href="https://github.com/leouieda">Leonardo Uieda</a>
     </p>
 </header>
@@ -64,13 +65,13 @@
 
     <h3>Welcome to Tesseroids</h3>
 
-    <img src='images/logo.png' 
+    <img src='images/logo.png'
      style='float:left; border:none; margin-right:10px; margin-top:0px'
      width="90px">
 
     <p>
-    Tesseroids is a suite of <b>open source</b> 
-    programs for the forward modeling of gravitational fields 
+    Tesseroids is a suite of <b>open source</b>
+    programs for the forward modeling of gravitational fields
     in spherical coordinates.
     It can model the gravitational potential, acceleration, and gradient tensor.
     All programs run on the <b>command-line</b>
@@ -79,26 +80,42 @@
 
     <h3>So, what is a tesseroid?</h3>
 
-    <img 
+    <img
      src="images/tesseroid.png"
      style="float:left; margin-right:20px; margin-top:0px; border:none;"
      width="200px">
 
     <p style="margin-top:20px; margin-bottom:60px">
     The geometric element used in the modeling processes is
-    a <strong>spherical prism</strong>, also called a 
+    a <strong>spherical prism</strong>, also called a
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html#what-is-a-tesseroid-anyway">tesseroid</a>.
     Tesseroids are useful to model
     <strong>large geologic structures</strong>
     where the Earth's curvature
-    must be taken into consideration.    
-    However, the <i>Tesseroids</i> package 
+    must be taken into consideration.
+    However, the <i>Tesseroids</i> package
     also contains programs for modeling using
-    <strong>right rectangular prisms</strong>, 
+    <strong>right rectangular prisms</strong>,
     both in Cartesian and spherical coordinates.
     </p>
 
-    
+    <h3>Documentation</h3>
+
+    <p>
+    Documentation for Tesseroids is hosted on Read the Docs.
+    You can access it online
+    <a href="http://tesseroids.readthedocs.org">here</a>,
+    or download a
+    <a href="https://media.readthedocs.org/pdf/tesseroids/latest/tesseroids.pdf">PDF version</a>.
+    </p>
+    <p>
+    Go to the docs for
+    <a href="http://tesseroids.readthedocs.org/en/latest/install.html">installation</a>,
+    <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>,
+    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theorerical background</a>,
+    and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
+    </p>
+
     <h3>Authors and Contributors</h3>
 
     <p>
@@ -112,7 +129,25 @@
     It was first developed as my bachelor's thesis
     at the <a href="http://www.iag.usp.br">Universidade de Sao Paulo</a>, Brazil.
     It has now made it's way into my PhD thesis at
-    <a href="http://www.on.br">Observatorio Nacional</a>, Brazil.    
+    <a href="http://www.on.br">Observatorio Nacional</a>, Brazil.
+    </p>
+
+    <h3>Citing</h3>
+
+    <p>
+    If you use Tesseroids in your research, please consider citing it in your
+    publications:
+    </p>
+    <p>
+    Uieda, L. (2013), Tesseroids: Forward modeling of gravitational fields in
+    spherical coordinates, figshare,
+    <a href="http://dx.doi.org/10.6084/m9.figshare.786514">http://dx.doi.org/10.6084/m9.figshare.786514</a>,
+    doi:10.6084/m9.figshare.786514.
+    </p>
+    <p>
+    See the
+    <a href="http://tesseroids.readthedocs.org/en/latest/citation.html">Citation
+    section</a> of the docs for more information.
     </p>
 
     <h3>License</h3>
@@ -125,17 +160,7 @@
     with fewer restrictions.
     </p>
 
-    <h3>Documentation</h3>
-
-    Documentation for Tesseroids is hosted on  
-    <a href="http://tesseroids.readthedocs.org">Read the Docs</a>!
-    Go to the docs for
-    <a href="http://tesseroids.readthedocs.org/en/latest/install.html">installation</a>, 
-    <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>, 
-    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theorerical background</a>,
-    and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
-
-    <h3>Let me know what you think</h3>    
+    <h3>Let me know what you think</h3>
 
     <div id="disqus_thread"></div>
     <script type="text/javascript">
@@ -151,12 +176,12 @@
     </script>
     <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
     <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-    
+
 </section>
 
 <footer>
     <p><small>
-        Hosted on <a href="https://pages.github.com">GitHub Pages</a> 
+        Hosted on <a href="https://pages.github.com">GitHub Pages</a>
         using the Dinky theme
     </small></p>
 </footer>
