--- a/index.html
+++ b/index.html
@@ -39,26 +39,23 @@
     coordinates</p>
 
     <ul>
+        <!--<li class="download"><a class="buttons"-->
+            <!--href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Linux (32bit)</a>-->
+        <!--</li>-->
         <li class="download"><a class="buttons"
-            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Linux (32bit)</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-bin64.tar.gz">Linux (64bit)</a>
         </li>
         <li class="download"><a class="buttons"
-            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin64.tar.gz&can=2&q=">Linux (64bit)</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-win32.zip">Windows</a>
         </li>
         <li class="download"><a class="buttons"
-            href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-win32.zip&can=2&q=">Windows</a>
-        </li>
-        <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/zipball/master">Latest source</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-src.zip">Source code</a>
         </li>
         <li><a class="buttons github"
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
         </li>
     </ul>
 
-    <p class="header">Developed by
-        <a class="header name" href="https://github.com/leouieda">Leonardo Uieda</a>
-    </p>
 </header>
 
 <section>
