Added version num to side header

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <div class="wrapper">
 
 <header>
-    <h1 class="header">Tesseroids</h1>
+    <h1 class="header">Tesseroids v1.1</h1>
     <p class="header">Forward modeling of gravitational fields in spherical
     coordinates</p>
 
