Added section for other software

--- a/index.html
+++ b/index.html
@@ -129,6 +129,18 @@
     <a href="http://www.on.br">Observatorio Nacional</a>, Brazil.
     </p>
 
+    <p>
+    I also develop
+    <a href="https://github.com/leouieda">other open-source scientific
+        software</a>.
+    My main project these days is
+    <a href="http://www.fatiando.org">Fatiando a Terra</a>,
+    a package of various <strong>modeling and inversion</strong> methods for geophysics.
+    Fatiando includes most of the functionality of Tesseroids and adds
+    3D plotting capabilities, courtesy of
+    <a href="http://code.enthought.com/projects/mayavi/">Mayavi</a>.
+    </p>
+
     <h3>Citing</h3>
 
     <p>
