Link to 32bit binary distribution

--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
     coordinates</p>
 
     <ul>
-        <!--<li class="download"><a class="buttons"-->
-            <!--href="https://code.google.com/p/tesseroids/downloads/detail?name=tesseroids-1.0-bin32.tar.gz&can=2&q=">Linux (32bit)</a>-->
-        <!--</li>-->
+        <li class="download"><a class="buttons"
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-bin32.tar.gz">Linux (32bit)</a>
+        </li>
         <li class="download"><a class="buttons"
             href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-bin64.tar.gz">Linux (64bit)</a>
         </li>
