Updated downlaod links to v1.1.1

--- a/index.html
+++ b/index.html
@@ -34,22 +34,22 @@
 <div class="wrapper">
 
 <header>
-    <h1 class="header">Tesseroids v1.1</h1>
+    <h1 class="header">Tesseroids v1.1.1</h1>
     <p class="header">Forward modeling of gravitational fields in spherical
     coordinates</p>
 
     <ul>
         <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-bin32.tar.gz">Linux (32bit)</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-bin32.tar.gz">Linux (32bit)</a>
         </li>
         <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-bin64.tar.gz">Linux (64bit)</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-bin64.tar.gz">Linux (64bit)</a>
         </li>
         <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-win32.zip">Windows</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-win32.zip">Windows (32bit)</a>
         </li>
         <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1/tesseroids-1.1-src.zip">Source code</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-src.zip">Source code</a>
         </li>
         <li><a class="buttons github"
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
