Remove 32bit from Windows
Might be confusing. Keep it hidden until a 64bit version is available

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-bin64.tar.gz">Linux (64bit)</a>
         </li>
         <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-win32.zip">Windows (32bit)</a>
+            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-win32.zip">Windows</a>
         </li>
         <li class="download"><a class="buttons"
             href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-src.zip">Source code</a>
