Link to download older versions

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
     Go to the docs for
     <a href="http://tesseroids.readthedocs.org/en/latest/install.html">installation</a>,
     <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>,
-    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theorerical background</a>,
+    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theoretical background</a>,
     and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
     </p>
 
@@ -167,6 +167,16 @@
     <a href="http://tesseroids.readthedocs.org/en/latest/license.html">BSD licensed</a>.
     This means that it can be <b>reused</b> and <b>remixed</b>
     with fewer restrictions.
+    </p>
+
+    <h3>Older versions</h3>
+
+    <p>
+    You can download older versions of Tesseroids from
+    <a href="https://github.com/leouieda/tesseroids/releases">GitHub</a>
+    (v1.1 and above) and
+    <a href="http://code.google.com/p/tesseroids/downloads/list">Google Code</a>
+    (v1.0 and below).
     </p>
 
     <h3>Let me know what you think</h3>
