Updated title in citation section

--- a/index.html
+++ b/index.html
@@ -148,8 +148,9 @@
     publications:
     </p>
     <p>
-    Uieda, L. (2013), Tesseroids: Forward modeling of gravitational fields in
-    spherical coordinates, figshare,
+    Uieda, L. (2013),
+    Source code and compiled binaries for software Tesseroids,
+    figshare,
     <a href="http://dx.doi.org/10.6084/m9.figshare.786514">http://dx.doi.org/10.6084/m9.figshare.786514</a>,
     doi:10.6084/m9.figshare.786514.
     </p>
