Added button for docs and changed text in doc sect

--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
         <li><a class="buttons github"
             href="https://github.com/leouieda/tesseroids">View On GitHub</a>
         </li>
+        <li><a style="margin-left: 8pt;"
+            href="http://tesseroids.readthedocs.org/">Documentation</a>
+        </li>
     </ul>
 
 </header>
@@ -99,14 +102,12 @@
     <h3>Documentation</h3>
 
     <p>
-    Documentation for Tesseroids is hosted on Read the Docs.
-    You can access it online
-    <a href="http://tesseroids.readthedocs.org">here</a>,
-    or download a
-    <a href="https://media.readthedocs.org/pdf/tesseroids/latest/tesseroids.pdf">PDF version</a>.
+    <a href="http://tesseroids.readthedocs.org">View the latest documentation online</a>,
+    courtesy of Read the Docs.
     </p>
     <p>
     Go to the docs for
+    <a href="http://tesseroids.readthedocs.org/en/latest/issues.html">known issues</a>,
     <a href="http://tesseroids.readthedocs.org/en/latest/install.html">installation</a>,
     <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>,
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theoretical background</a>,
