Updated page to match github readme

--- a/index.html
+++ b/index.html
@@ -39,20 +39,11 @@
     coordinates</p>
 
     <ul>
-        <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-bin32.tar.gz">Linux (32bit)</a>
+        <li><a style="margin-left: 8pt;"
+            href="https://github.com/leouieda/tesseroids/releases">Download</a>
         </li>
-        <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-bin64.tar.gz">Linux (64bit)</a>
-        </li>
-        <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-win32.zip">Windows</a>
-        </li>
-        <li class="download"><a class="buttons"
-            href="https://github.com/leouieda/tesseroids/releases/download/v1.1.1/tesseroids-1.1.1-src.zip">Source code</a>
-        </li>
-        <li><a class="buttons github"
-            href="https://github.com/leouieda/tesseroids">View On GitHub</a>
+        <li><a style="margin-left: 8pt;"
+            href="https://github.com/leouieda/tesseroids">Source code</a>
         </li>
         <li><a style="margin-left: 8pt;"
             href="http://tesseroids.readthedocs.org/">Documentation</a>
@@ -63,22 +54,20 @@
 
 <section>
 
-    <h3>Welcome to Tesseroids</h3>
-
-    <img src='images/logo.png'
-     style='float:left; border:none; margin-right:10px; margin-top:0px'
-     width="90px">
+    <h1><img src='https://raw.githubusercontent.com/leouieda/tesseroids/master/doc/_static/banner.png'
+     style='border:none; max-width:100%; margin-right:10px; margin-top:0px'
+     width="500px"></h1>
 
     <p>
-    Tesseroids is a suite of <b>open source</b>
+    A suite of <strong>open source</strong>
     programs for the forward modeling of gravitational fields
     in spherical coordinates.
     It can model the gravitational potential, acceleration, and gradient tensor.
-    All programs run on the <b>command-line</b>
+    All programs run on the <strong>command-line</strong>
     and can be easily plugged into shell scripts and workflows.
     </p>
 
-    <h3>So, what is a tesseroid?</h3>
+    <h2>So, what is a tesseroid?</h2>
 
     <img
      src="images/tesseroid.png"
@@ -99,7 +88,7 @@
     both in Cartesian and spherical coordinates.
     </p>
 
-    <h3>Documentation</h3>
+    <h2>Documentation</h2>
 
     <p>
     <a href="http://tesseroids.readthedocs.org">View the latest documentation online</a>,
@@ -108,41 +97,14 @@
     <p>
     Go to the docs for
     <a href="http://tesseroids.readthedocs.org/en/latest/issues.html">known issues</a>,
-    <a href="http://tesseroids.readthedocs.org/en/latest/install.html">installation</a>,
+    <a
+        href="http://tesseroids.readthedocs.org/en/latest/install.html">installing</a>,
     <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>,
     <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theoretical background</a>,
     and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
     </p>
 
-    <h3>Authors and Contributors</h3>
-
-    <p>
-    Tesseroids is developed by myself
-    (<a href="http://fatiando.org/people/uieda">Leonardo Uieda</a>)
-    in cooperation with prof.
-    <a href="http://lithoflex.org">Carla Braitenberg</a>.
-    </p>
-
-    <p>
-    It was first developed as my bachelor's thesis
-    at the <a href="http://www.iag.usp.br">Universidade de Sao Paulo</a>, Brazil.
-    It has now made it's way into my PhD thesis at
-    <a href="http://www.on.br">Observatorio Nacional</a>, Brazil.
-    </p>
-
-    <p>
-    I also develop
-    <a href="https://github.com/leouieda">other open-source scientific
-        software</a>.
-    My main project these days is
-    <a href="http://www.fatiando.org">Fatiando a Terra</a>,
-    a package of various <strong>modeling and inversion</strong> methods for geophysics.
-    Fatiando includes most of the functionality of Tesseroids and adds
-    3D plotting capabilities, courtesy of
-    <a href="http://code.enthought.com/projects/mayavi/">Mayavi</a>.
-    </p>
-
-    <h3>Citing</h3>
+    <h2>Citing</h2>
 
     <p>
     If you use Tesseroids in your research, please consider citing it in your
@@ -161,17 +123,16 @@
     section</a> of the docs for more information.
     </p>
 
-    <h3>License</h3>
+    <h2>License</h2>
 
     <p>
-    As of version 1.1,
     Tesseroids is
     <a href="http://tesseroids.readthedocs.org/en/latest/license.html">BSD licensed</a>.
     This means that it can be <b>reused</b> and <b>remixed</b>
     with fewer restrictions.
     </p>
 
-    <h3>Older versions</h3>
+    <h2>Older versions</h2>
 
     <p>
     You can download older versions of Tesseroids from
@@ -181,29 +142,24 @@
     (v1.0 and below).
     </p>
 
-    <h3>Let me know what you think</h3>
+    <h2>Let me know what you think</h2>
 
-    <div id="disqus_thread"></div>
-    <script type="text/javascript">
-        /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'tesseroids'; // required: replace example with your forum shortname
-
-        /* * * DON'T EDIT BELOW THIS LINE * * */
-        (function() {
-            var dsq = document.createElement('script'); dsq.type = 'text/javascript'; dsq.async = true;
-            dsq.src = 'http://' + disqus_shortname + '.disqus.com/embed.js';
-            (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
-        })();
-    </script>
-    <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-    <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
-
+    <p>
+    For help, questions, comments, suggestions, or just to chat,
+    contact <a href="http://www.leouieda.com">Leonardo Uieda</a>
+    by e-mail, <a href="https://twitter.com/leouieda">Twitter</a>,
+    or
+    <a href="https://plus.google.com/+LeonardoUieda">Google+</a>.
+    An <strong>even better option</strong> is to file an
+    <a href="https://github.com/leouieda/tesseroids/issues">issue on
+    Github</a>.
+    </p>
 </section>
 
 <footer>
     <p><small>
         Hosted on <a href="https://pages.github.com">GitHub Pages</a>
-        using the Dinky theme
+        using the Dinky theme.
     </small></p>
 </footer>
 
