Increase font-size

--- a/index.html
+++ b/index.html
@@ -91,17 +91,13 @@
     <h2>Documentation</h2>
 
     <p>
-    <a href="http://tesseroids.readthedocs.org">View the latest documentation online</a>,
-    courtesy of Read the Docs.
+    View the documentation online at:
+    <a href="http://tesseroids.readthedocs.org">tesseroids.readthedocs.org</a>
     </p>
     <p>
-    Go to the docs for
-    <a href="http://tesseroids.readthedocs.org/en/latest/issues.html">known issues</a>,
-    <a
-        href="http://tesseroids.readthedocs.org/en/latest/install.html">installing</a>,
-    <a href="http://tesseroids.readthedocs.org/en/latest/usage.html">usage</a>,
-    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html">theoretical background</a>,
-    and some <a href="http://tesseroids.readthedocs.org/en/latest/cookbook.html">examples</a>.
+    You will find the source code and links to other resources on the Github
+    repository:
+    <a href="https://github.com/leouieda/tesseroids">github.com/leouieda/tesseroids</a>
     </p>
 
     <h2>Citing</h2>
