Redirect to tesseroids.leouieda.com

--- a/index.html
+++ b/index.html
@@ -3,163 +3,14 @@
 
 <head>
     <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
     <title>Tesseroids</title>
-
-    <link rel="shortcut icon" href="images/logo.ico">
-
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/pygment_trac.css">
-    <script src="javascripts/scale.fix.js"></script>
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-
-    <!-- Google Analytics -->
-    <script type="text/javascript">
-        var _gaq = _gaq || [];
-        _gaq.push(['_setAccount', 'UA-38125837-3']);
-        _gaq.push(['_trackPageview']);
-        (function() {
-            var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
-            ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
-            var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
-        })();
-    </script>
-
+    <meta http-equiv="refresh" content="3; url=http://tesseroids.leouieda.com">
 </head>
 
 <body>
-<div class="wrapper">
-
-<header>
-    <h1 class="header">Tesseroids v1.1.1</h1>
-    <p class="header">Forward modeling of gravitational fields in spherical
-    coordinates</p>
-
-    <ul>
-        <li><a style="margin-left: 8pt;"
-            href="https://github.com/leouieda/tesseroids/releases">Download</a>
-        </li>
-        <li><a style="margin-left: 8pt;"
-            href="https://github.com/leouieda/tesseroids">Source code</a>
-        </li>
-        <li><a style="margin-left: 8pt;"
-            href="http://tesseroids.readthedocs.org/">Documentation</a>
-        </li>
-    </ul>
-
-</header>
-
-<section>
-
-    <h1><img src='https://raw.githubusercontent.com/leouieda/tesseroids/master/doc/_static/banner.png'
-     style='border:none; max-width:100%; margin-right:10px; margin-top:0px'
-     width="500px"></h1>
-
-    <p>
-    A suite of <strong>open source</strong>
-    programs for the forward modeling of gravitational fields
-    in spherical coordinates.
-    It can model the gravitational potential, acceleration, and gradient tensor.
-    All programs run on the <strong>command-line</strong>
-    and can be easily plugged into shell scripts and workflows.
-    </p>
-
-    <h2>So, what is a tesseroid?</h2>
-
-    <img
-     src="images/tesseroid.png"
-     style="float:left; margin-right:20px; margin-top:0px; border:none;"
-     width="200px">
-
-    <p style="margin-top:20px; margin-bottom:60px">
-    The geometric element used in the modeling processes is
-    a <strong>spherical prism</strong>, also called a
-    <a href="http://tesseroids.readthedocs.org/en/latest/theory.html#what-is-a-tesseroid-anyway">tesseroid</a>.
-    Tesseroids are useful to model
-    <strong>large geologic structures</strong>
-    where the Earth's curvature
-    must be taken into consideration.
-    However, the <i>Tesseroids</i> package
-    also contains programs for modeling using
-    <strong>right rectangular prisms</strong>,
-    both in Cartesian and spherical coordinates.
-    </p>
-
-    <h2>Documentation</h2>
-
-    <p>
-    View the documentation online at:
-    <a href="http://tesseroids.readthedocs.org">tesseroids.readthedocs.org</a>
-    </p>
-    <p>
-    You will find the source code and links to other resources on the Github
-    repository:
-    <a href="https://github.com/leouieda/tesseroids">github.com/leouieda/tesseroids</a>
-    </p>
-
-    <h2>Citing</h2>
-
-    <p>
-    If you use Tesseroids in your research, please consider citing it in your
-    publications:
-    </p>
-    <p>
-    Uieda, L. (2013),
-    Source code and compiled binaries for software Tesseroids,
-    figshare,
-    <a href="http://dx.doi.org/10.6084/m9.figshare.786514">http://dx.doi.org/10.6084/m9.figshare.786514</a>,
-    doi:10.6084/m9.figshare.786514.
-    </p>
-    <p>
-    See the
-    <a href="http://tesseroids.readthedocs.org/en/latest/citation.html">Citation
-    section</a> of the docs for more information.
-    </p>
-
-    <h2>License</h2>
-
-    <p>
-    Tesseroids is
-    <a href="http://tesseroids.readthedocs.org/en/latest/license.html">BSD licensed</a>.
-    This means that it can be <b>reused</b> and <b>remixed</b>
-    with fewer restrictions.
-    </p>
-
-    <h2>Older versions</h2>
-
-    <p>
-    You can download older versions of Tesseroids from
-    <a href="https://github.com/leouieda/tesseroids/releases">GitHub</a>
-    (v1.1 and above) and
-    <a href="http://code.google.com/p/tesseroids/downloads/list">Google Code</a>
-    (v1.0 and below).
-    </p>
-
-    <h2>Let me know what you think</h2>
-
-    <p>
-    For help, questions, comments, suggestions, or just to chat,
-    contact <a href="http://www.leouieda.com">Leonardo Uieda</a>
-    by e-mail, <a href="https://twitter.com/leouieda">Twitter</a>,
-    or
-    <a href="https://plus.google.com/+LeonardoUieda">Google+</a>.
-    An <strong>even better option</strong> is to file an
-    <a href="https://github.com/leouieda/tesseroids/issues">issue on
-    Github</a>.
-    </p>
-</section>
-
-<footer>
-    <p><small>
-        Hosted on <a href="https://pages.github.com">GitHub Pages</a>
-        using the Dinky theme.
-    </small></p>
-</footer>
-
-</div>
-<!--[if !IE]><script>fixScale(document);</script><![endif]-->
+<h1>This site has moved</h1>
+<p>The official site for Tesseroids is now
+<a href="http://tesseroids.leouieda.com">tesseroids.leouieda.com</a>.</p>
+</p>Please wait 3 seconds while you're redirected.</p>
 </body>
 </html>
